2002-05-20  Roman Hodek  <roman@hodek.net>

	* client/histogram.c: added y axis labelling, draw normal
	distribution

	* server/server.c (new_computer_player): close inherited fd's, use
	_exit normally to avoid GTK atexit procedures running.

	* deian/gnocatan-ai.menu: fix typo

2002-05-19  Roman Hodek  <roman@hodek.net>

	* Release 0.6.99 here as beta for 0.7.0.
	
	* client/connect.c (build_create_interface): new spin for number
	of ai players.

	* ai/ai.c (random_name): don't open computer_names in rw mode;
	added srand to avoid rather likely case that two ai players
	started closely together choose the same name.

	* server/player.c: made tournament mode work;
	Added PB_SILENT mode for player_broadcast.

	* server/server.c (new_computer_player): new argument 'server'
	(for completeness), simplify a bit, start a second child to avoid
	zombies

	* server/gnocatan-server-console.c: new -c option to start a
	number of computer players

	* meta-server/gnocatan-meta-server.c (client_create_new_server):
	parse number of ai players and pass it on to server

	* ai/Makefile.am: remove admin-gtk stuff, obviously copied from
	client/Makefile.am

	* Makefile.am (dist-hook): added spec file, autogen.sh, and debian
	files to dist tarball

	* server/Makefile.am: added new games

	* common/Makefile.am: added gnocatan-path.h

	* client/help/C/Makefile.am (dist-hook): add images to dist tarball

	* gnocatan.spec: best-effort try to implement same sub packages
	scheme as for Debian, but untested
	
	* debian/control: added Recommends: gnocatan-ai to both server
	packages, as they can start ai clients

2002-05-16  Roman Hodek  <roman@hodek.net>

	* client/chat.c (chat_parser): Fix /me.

	* meta-server/gnocatan-meta-server.c (client_create_new_server): 
	Emit an syslog error message if server cannot be exec-ed.

	* Make everything compile also with -Werror.
	
	* debian subdir:
	New package layout:
	- merge -data into -client, data are too small to justify a
	separate Arch: all package